--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>8.5.4</version>
+			</plugin>
+
 		</plugins>
 	</build>
+
+
 
 </project>
