--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,17 @@
 				<version>8.5.4</version>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<!-- 1.8, 1.10, 11, 12, 13-->
+					<source>17</source>
+					<target>17</target>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
